--- a/simulador-cartoes-perfurados/appmanifest.json
+++ b/simulador-cartoes-perfurados/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "Simulador de Cartoes Perfurados",
-	"short_name": "Cartoes perfurados",
+	"name": "New project",
+	"short_name": "New project",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
